// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Product
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="productName"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="productName"
        onChange={[MockFunction]}
        type="text"
        value="test1"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="categoryId"
    >
      Category
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="categoryId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Category
        </option>
        <option
          value={1}
        >
          Food
        </option>
        <option
          value={2}
        >
          Drinks
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="unitPrice"
    >
      Unit Price
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="unitPrice"
        onChange={[MockFunction]}
        type="text"
        value={12}
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="unitsInStock"
    >
      Units In Stocks
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="unitsInStock"
        onChange={[MockFunction]}
        type="text"
        value={11}
      />
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Save
    </button>
    <button
      className="btn btn-light ml-2"
      onClick={[MockFunction]}
    >
      Cancel
    </button>
  </div>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Product
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="productName"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="productName"
        onChange={[MockFunction]}
        type="text"
        value="test1"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="categoryId"
    >
      Category
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="categoryId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Category
        </option>
        <option
          value={1}
        >
          Food
        </option>
        <option
          value={2}
        >
          Drinks
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="unitPrice"
    >
      Unit Price
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="unitPrice"
        onChange={[MockFunction]}
        type="text"
        value={12}
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="unitsInStock"
    >
      Units In Stocks
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="unitsInStock"
        onChange={[MockFunction]}
        type="text"
        value={11}
      />
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={true}
      type="submit"
    >
      Saving...
    </button>
    <button
      className="btn btn-light ml-2"
      onClick={[MockFunction]}
    >
      Cancel
    </button>
  </div>
</form>
`;
